# traffic-plate-face-anonymization

./: LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.in
TrafficAnonymization/: face_mosaic_yolofacePandF.py  face_mosaic_yolofacePthenF.py  video_mosaic_plate_fullversion.py
